--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,16 +6,27 @@ services:
     ports:
       - 8000:8000
     volumes:
-      - /src:/src
+      - ./:/app
     env_file: .env
 
   db:
     image: postgres:13
     ports:
-      - 8080:8080
+      - 5432:5432
     volumes:
       - ../pgdata:/var/lib/postgresql/data
     environment:
       POSTGRES_USER: "root"
       POSTGRES_DB: "gmschool"
       POSTGRES_PASSWORD: "123456"
+
+  pgadmin:
+    image: dpage/pgadmin4
+    ports:
+      - 5050:80
+    volumes:
+      - ../pgadmin:/var/lib/pgadmin
+    environment:
+      PGADMIN_DEFAULT_EMAIL: anderson@gmail.com
+      PGADMIN_DEFAULT_PASSWORD: 123
+      POSTGRES_DB: gmschool
