--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     volumes:
       - ./:/app
     env_file: .env
+    container_name: gm-api
 
   db:
     image: postgres:13
@@ -19,6 +20,7 @@ services:
       POSTGRES_USER: "root"
       POSTGRES_DB: "gmschool"
       POSTGRES_PASSWORD: "123456"
+    container_name: gm-db
 
   pgadmin:
     image: dpage/pgadmin4
@@ -30,3 +32,4 @@ services:
       PGADMIN_DEFAULT_EMAIL: anderson@gmail.com
       PGADMIN_DEFAULT_PASSWORD: 123
       POSTGRES_DB: gmschool
+    container_name: pgadmin
