--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "pg": "^8.4.1"
+    "pg": "^8.4.1",
+    "uuid": "^8.3.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
@@ -26,6 +27,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.8",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/uuid": "^8.3.0",
     "knex": "^0.21.6",
     "nodemon": "^2.0.4",
     "ts-node": "^9.0.0",
