--- a/tsconfig.json
+++ b/tsconfig.json
@@ -49,8 +49,9 @@
       "@models/*": ["src/app/models/*"],
       "@controllers/*": ["src/app/controllers/*"],
       "@routes/*": ["src/app/routes/*"],
-      "@services/*": ["src/app/services/*"]
-
+      "@services/*": ["src/app/services/*"],
+      "@middlewares/*": ["src/app/middlewares/*"],
+      "@exceptions/*": ["src/app/exceptions/*"]
     } /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */,
     // "rootDirs": [],                        /* List of root folders whose combined content represents the structure of the project at runtime. */
     // "typeRoots": [],                       /* List of folders to include type definitions from. */
