--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "joi": "^17.2.1",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.4.1",
     "uuid": "^8.3.1"
@@ -26,6 +27,7 @@
     "@types/cors": "^2.8.7",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.8",
+    "@types/joi": "^14.3.4",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/uuid": "^8.3.0",
     "knex": "^0.21.6",
