--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "devStart": "NODE_ENV=development nodemon -r tsconfig-paths/register ./src/index.ts",
+    "devStart": "ts-node-dev -r tsconfig-paths/register ./src/index.ts --respawn --transpileOnly",
     "start": "node ./build/App.js",
     "build": "tsc",
     "create-migration": "node -r dotenv/config && knex migrate:make <arg-here> -x ts"
@@ -33,6 +33,7 @@
     "knex": "^0.21.6",
     "nodemon": "^2.0.4",
     "ts-node": "^9.0.0",
+    "ts-node-dev": "^1.0.0",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.0.3"
   }
