--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
   "dependencies": {
     "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
+    "date-fns": "^2.16.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "joi": "^17.2.1",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.4.1",
+    "ramda": "^0.27.1",
     "uuid": "^8.3.1"
   },
   "devDependencies": {
@@ -29,6 +31,7 @@
     "@types/express": "^4.17.8",
     "@types/joi": "^14.3.4",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/ramda": "^0.27.32",
     "@types/uuid": "^8.3.0",
     "knex": "^0.21.6",
     "nodemon": "^2.0.4",
