--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "devStart": "NODE_ENV=development nodemon -r tsconfig-paths/register ./src/index.ts",
+    "devStart": "ts-node-dev -r tsconfig-paths/register ./src/index.ts --respawn --transpileOnly",
     "start": "node ./build/App.js",
     "build": "tsc",
     "create-migration": "node -r dotenv/config && knex migrate:make <arg-here> -x ts"
@@ -15,11 +15,13 @@
   "dependencies": {
     "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
+    "date-fns": "^2.16.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "joi": "^17.2.1",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.4.1",
+    "ramda": "^0.27.1",
     "uuid": "^8.3.1"
   },
   "devDependencies": {
@@ -29,10 +31,12 @@
     "@types/express": "^4.17.8",
     "@types/joi": "^14.3.4",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/ramda": "^0.27.32",
     "@types/uuid": "^8.3.0",
     "knex": "^0.21.6",
     "nodemon": "^2.0.4",
     "ts-node": "^9.0.0",
+    "ts-node-dev": "^1.0.0",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.0.3"
   }
