--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "incremental": true /* Enable incremental compilation */,
     "target": "es5" /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', 'ES2018', 'ES2019', 'ES2020', or 'ESNEXT'. */,
     "module": "commonjs" /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', 'es2020', or 'ESNext'. */,
-    // "lib": [],                             /* Specify library files to be included in the compilation. */
+    "lib": ["es2019"] /* Specify library files to be included in the compilation. */,
     // "allowJs": true,                       /* Allow javascript files to be compiled. */
     // "checkJs": true,                       /* Report errors in .js files. */
     // "jsx": "preserve",                     /* Specify JSX code generation: 'preserve', 'react-native', or 'react'. */
@@ -45,10 +45,20 @@
     "baseUrl": "." /* Base directory to resolve non-absolute module names. */,
     "paths": {
       "@config/*": ["src/app/config/*"],
+      "@config/": ["src/app/config"],
+
       "@loaders/*": ["src/app/loaders/*"],
+      "@loaders/": ["src/app/loaders"],
+
       "@models/*": ["src/app/models/*"],
+      "@models/": ["src/app/models"],
+
       "@controllers/*": ["src/app/controllers/*"],
+      "@controllers/": ["src/app/controllers"],
+
       "@routes/*": ["src/app/routes/*"],
+      "@routes/": ["src/app/routes"],
+
       "@services/*": ["src/app/services/*"],
       "@middlewares/*": ["src/app/middlewares/*"],
       "@exceptions/*": ["src/app/exceptions/*"],
