--- a/tsconfig.json
+++ b/tsconfig.json
@@ -60,7 +60,9 @@
       "@routes/": ["src/app/routes"],
 
       "@services/*": ["src/app/services/*"],
+      "@services/": ["src/app/services"],
       "@middlewares/*": ["src/app/middlewares/*"],
+      "@middlewares/": ["src/app/middlewares"],
       "@exceptions/*": ["src/app/exceptions/*"],
       "@database/*": ["src/app/database/*"]
     } /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */,
